# picogk-gpu

./: .gitignore  pyproject.toml
benchmarks/: env.py  harness.py  scoreboard.py
benchmarks/demo/: csg_heat_exchanger_sketch.py  sparse_reinit_demo.py
benchmarks/helix_heatx/Host/: Host.csproj  Program.cs
benchmarks/micro/: bench_reinit.py
benchmarks/results/: bench_reinit_20260510_201018.json  bench_reinit_20260510_201457.json  bench_reinit_20260510_230143.json  bench_reinit_20260510_230542.json  helix_heatx_vox0.15_20260510_174554.json  helix_heatx_vox0.1_20260510_191647.json  helix_heatx_vox0.2_20260510_171528.json  helix_heatx_vox0.3_20260510_164819.json  helix_heatx_vox0.5_20260510_162940.json  helix_heatx_vox1.0_20260510_162538.json  helix_heatx_vox2.0_20260510_161908.json  helix_heatx_vox2.0_20260510_162427.json  rover_wheel_vox0.15_20260510_174752.json  rover_wheel_vox0.1_20260510_192122.json  rover_wheel_vox0.2_20260510_171738.json  rover_wheel_vox0.3_20260510_164955.json  rover_wheel_vox0.5_20260510_163050.json  rover_wheel_vox1.0_20260510_163005.json
benchmarks/rover_wheel/Host/: Host.csproj  Program.cs
scripts/: setup.sh
src/picogkgpu/: booleans.py  reinit.py  sparse.py  sparse_reinit.py
tests/: test_booleans.py  test_reinit.py  test_sparse_reinit.py
