[project]
name = "picogkgpu"
version = "0.0.1"
description = "GPU-accelerated computational geometry engine, PicoGK-API compatible"
requires-python = ">=3.12"
dependencies = [
    "warp-lang>=1.5",
    "numpy>=1.26",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-benchmark>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/picogkgpu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
